# zefir-ui-api

./: LICENSE  README.md
examples/cpp/: zefir_cpp_example.sln
examples/cpp/zefir_cpp_example/: CMakeLists.txt  dllmain.cpp  zefir_cpp_example.vcxproj
examples/cpp/zefir_cpp_example/includes/zefir_ui_api/: zefir_ui_api.h
examples/cpp/zefir_cpp_example/src/: bools.h  dllmain.cpp
examples/zig/: .gitignore  build.zig  build.zig.zon
examples/zig/src/: dllmain.zig  winxtra.zig
include/: zefir_ui_api.h
